--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,24 +11,30 @@ a {
   color: black;
 }
 
+h2 {
+  margin: 0 auto;
+}
+
+nav span {
+  display: inline-block;
+  padding: 20px 10px;
+}
+
 /* general content styles */
 .stories {
   display: flex;
   justify-content: space-between;
   margin-top: 17px;
-  border: 1px solid black;
 }
 
 .stories .text-content {
   height: 250px;
-  border: 1px solid black;
 }
 
 .story {
   display: flex;
   flex-direction: column;
   width: 300px;
-  border: 1px solid black;
 }
 
 .image-bg {
@@ -40,7 +46,6 @@ a {
   font-size: 30px;
   color: white;
   text-align: center;
-  border: 1px solid black;
 }
 
 /* header properties */
@@ -85,7 +90,6 @@ header nav {
 .content {
   display: flex;
   justify-content: space-between;
-  border: 1px solid black;
   width: 1232px;
   background-color: white;
   padding-top: 116px;
@@ -100,13 +104,16 @@ header nav {
 /* right large column */
 .column.large {
   width: 630px;
-  border: 1px solid black;
 }
 
 .main-story .image-bg {
   background-image: url(../images/story-main.png);
   text-align: left;
   font-size: 40px;
+}
+
+.main-story .image-bg span {
+  margin-left: 20px;
 }
 
 .earth.image-bg {
@@ -121,7 +128,6 @@ header nav {
 
 .column.medium {
   width: 300px;
-  border: 1px solid black;
 }
 
 .cat.image-bg {
@@ -131,13 +137,13 @@ header nav {
 /* left small column */
 .column.small {
   width: 240px;
-  border: 1px solid black;
 }
 
 .news-bites h3 {
   font-size: 16px;
   font-weight: bold;
   text-align: center;
+  margin-bottom: 40px;
 }
 
 .news-bites .bite {
